lab1-testsuite-larger/lab1-test-dir/ParCPP.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParCPP.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pListStm -> ListStm                         (3)
	%start_pListArg -> ListArg                         (4)
	%start_pListId -> ListId                           (5)
	%start_pType -> Type                               (6)
	%start_pStm -> Stm                                 (7)
	%start_pArg -> Arg                                 (8)
	%start_pExp16 -> Exp16                             (9)
	%start_pExp15 -> Exp15                             (10)
	%start_pExp14 -> Exp14                             (11)
	%start_pExp13 -> Exp13                             (12)
	%start_pExp12 -> Exp12                             (13)
	%start_pExp11 -> Exp11                             (14)
	%start_pExp10 -> Exp10                             (15)
	%start_pExp9 -> Exp9                               (16)
	%start_pExp8 -> Exp8                               (17)
	%start_pExp4 -> Exp4                               (18)
	%start_pExp3 -> Exp3                               (19)
	%start_pExp2 -> Exp2                               (20)
	%start_pExp -> Exp                                 (21)
	%start_pExp1 -> Exp1                               (22)
	%start_pExp5 -> Exp5                               (23)
	%start_pExp6 -> Exp6                               (24)
	%start_pExp7 -> Exp7                               (25)
	%start_pListExp -> ListExp                         (26)
	Integer -> L_integ                                 (27)
	Double -> L_doubl                                  (28)
	String -> L_quoted                                 (29)
	Id -> L_Id                                         (30)
	Program -> ListDef                                 (31)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (32)
	ListDef ->                                         (33)
	ListDef -> ListDef Def                             (34)
	ListStm ->                                         (35)
	ListStm -> ListStm Stm                             (36)
	ListArg ->                                         (37)
	ListArg -> Arg                                     (38)
	ListArg -> Arg ',' ListArg                         (39)
	ListId -> Id                                       (40)
	ListId -> Id ',' ListId                            (41)
	Type -> 'bool'                                     (42)
	Type -> 'double'                                   (43)
	Type -> 'int'                                      (44)
	Type -> 'string'                                   (45)
	Type -> 'void'                                     (46)
	Stm -> Exp ';'                                     (47)
	Stm -> Type Id ' ;'                                (48)
	Stm -> Type Id ',' ListId ';'                      (49)
	Stm -> Type Id '=' Exp ';'                         (50)
	Stm -> 'return' Exp ';'                            (51)
	Stm -> 'while' '(' Exp ')' Stm                     (52)
	Stm -> '{' ListStm '}'                             (53)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (54)
	Arg -> Type Id                                     (55)
	Exp16 -> Integer                                   (56)
	Exp16 -> Double                                    (57)
	Exp16 -> String                                    (58)
	Exp16 -> 'true'                                    (59)
	Exp16 -> 'false'                                   (60)
	Exp16 -> Id                                        (61)
	Exp16 -> '(' Exp ')'                               (62)
	Exp15 -> Id '(' ListExp ')'                        (63)
	Exp15 -> Id '::' Id                                (64)
	Exp15 -> Id '[' Id ']'                             (65)
	Exp15 -> Exp16                                     (66)
	Exp14 -> Exp15 '++'                                (67)
	Exp14 -> Exp15 '--'                                (68)
	Exp14 -> '*' Id                                    (69)
	Exp14 -> Id '.' Id                                 (70)
	Exp14 -> Id '->' Id                                (71)
	Exp14 -> Exp15                                     (72)
	Exp13 -> '++' Exp14                                (73)
	Exp13 -> '--' Exp14                                (74)
	Exp13 -> '!' Exp16                                 (75)
	Exp13 -> '-' Exp14                                 (76)
	Exp13 -> Exp14                                     (77)
	Exp12 -> Exp12 '*' Exp13                           (78)
	Exp12 -> Exp12 '/' Exp13                           (79)
	Exp12 -> Exp12 '%' Exp13                           (80)
	Exp12 -> Exp13                                     (81)
	Exp11 -> Exp11 '+' Exp12                           (82)
	Exp11 -> Exp11 '-' Exp12                           (83)
	Exp11 -> Exp12                                     (84)
	Exp10 -> Exp10 '<<' Exp11                          (85)
	Exp10 -> Exp10 '>>' Exp11                          (86)
	Exp10 -> Exp11                                     (87)
	Exp9 -> Exp9 '<' Exp10                             (88)
	Exp9 -> Exp9 '>' Exp10                             (89)
	Exp9 -> Exp9 '<=' Exp10                            (90)
	Exp9 -> Exp9 '>=' Exp10                            (91)
	Exp9 -> Exp10                                      (92)
	Exp8 -> Exp8 '==' Exp9                             (93)
	Exp8 -> Exp8 '!=' Exp9                             (94)
	Exp8 -> Exp9                                       (95)
	Exp4 -> Exp4 '&&' Exp5                             (96)
	Exp4 -> Exp5                                       (97)
	Exp3 -> Exp3 '||' Exp4                             (98)
	Exp3 -> Exp4                                       (99)
	Exp2 -> Exp3 '=' Exp2                              (100)
	Exp2 -> Exp3 '+=' Exp2                             (101)
	Exp2 -> Exp3 '-=' Exp2                             (102)
	Exp2 -> Exp3 '?' Stm ':' Stm                       (103)
	Exp2 -> Exp3                                       (104)
	Exp -> Exp1                                        (105)
	Exp1 -> Exp2                                       (106)
	Exp5 -> Exp6                                       (107)
	Exp6 -> Exp7                                       (108)
	Exp7 -> Exp8                                       (109)
	ListExp ->                                         (110)
	ListExp -> Exp                                     (111)
	ListExp -> Exp ',' ListExp                         (112)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	' ;'           { PT _ (TS _ 1) }
	'!'            { PT _ (TS _ 2) }
	'!='           { PT _ (TS _ 3) }
	'%'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'double'       { PT _ (TS _ 34) }
	'else'         { PT _ (TS _ 35) }
	'false'        { PT _ (TS _ 36) }
	'if'           { PT _ (TS _ 37) }
	'int'          { PT _ (TS _ 38) }
	'return'       { PT _ (TS _ 39) }
	'string'       { PT _ (TS _ 40) }
	'true'         { PT _ (TS _ 41) }
	'void'         { PT _ (TS _ 42) }
	'while'        { PT _ (TS _ 43) }
	'{'            { PT _ (TS _ 44) }
	'||'           { PT _ (TS _ 45) }
	'}'            { PT _ (TS _ 46) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pListStm rule  3
	%start_pListArg rule  4
	%start_pListId  rule  5
	%start_pType    rule  6
	%start_pStm     rule  7
	%start_pArg     rule  8
	%start_pExp16   rule  9
	%start_pExp15   rule  10
	%start_pExp14   rule  11
	%start_pExp13   rule  12
	%start_pExp12   rule  13
	%start_pExp11   rule  14
	%start_pExp10   rule  15
	%start_pExp9    rule  16
	%start_pExp8    rule  17
	%start_pExp4    rule  18
	%start_pExp3    rule  19
	%start_pExp2    rule  20
	%start_pExp     rule  21
	%start_pExp1    rule  22
	%start_pExp5    rule  23
	%start_pExp6    rule  24
	%start_pExp7    rule  25
	%start_pListExp rule  26
	Integer         rule  27
	Double          rule  28
	String          rule  29
	Id              rule  30
	Program         rule  31
	Def             rule  32
	ListDef         rules 33, 34
	ListStm         rules 35, 36
	ListArg         rules 37, 38, 39
	ListId          rules 40, 41
	Type            rules 42, 43, 44, 45, 46
	Stm             rules 47, 48, 49, 50, 51, 52, 53, 54
	Arg             rule  55
	Exp16           rules 56, 57, 58, 59, 60, 61, 62
	Exp15           rules 63, 64, 65, 66
	Exp14           rules 67, 68, 69, 70, 71, 72
	Exp13           rules 73, 74, 75, 76, 77
	Exp12           rules 78, 79, 80, 81
	Exp11           rules 82, 83, 84
	Exp10           rules 85, 86, 87
	Exp9            rules 88, 89, 90, 91, 92
	Exp8            rules 93, 94, 95
	Exp4            rules 96, 97
	Exp3            rules 98, 99
	Exp2            rules 100, 101, 102, 103, 104
	Exp             rule  105
	Exp1            rule  106
	Exp5            rule  107
	Exp6            rule  108
	Exp7            rule  109
	ListExp         rules 110, 111, 112

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 33
	'double'       reduce using rule 33
	'int'          reduce using rule 33
	'string'       reduce using rule 33
	'void'         reduce using rule 33
	%eof           reduce using rule 33

	Program        goto state 104
	ListDef        goto state 105

State 1


	'bool'         shift, and enter state 83
	'double'       shift, and enter state 84
	'int'          shift, and enter state 85
	'string'       shift, and enter state 86
	'void'         shift, and enter state 87

	Def            goto state 102
	Type           goto state 103

State 2


	'bool'         reduce using rule 33
	'double'       reduce using rule 33
	'int'          reduce using rule 33
	'string'       reduce using rule 33
	'void'         reduce using rule 33
	%eof           reduce using rule 33

	ListDef        goto state 101

State 3


	'!'            reduce using rule 35
	'('            reduce using rule 35
	'*'            reduce using rule 35
	'++'           reduce using rule 35
	'-'            reduce using rule 35
	'--'           reduce using rule 35
	'bool'         reduce using rule 35
	'double'       reduce using rule 35
	'false'        reduce using rule 35
	'if'           reduce using rule 35
	'int'          reduce using rule 35
	'return'       reduce using rule 35
	'string'       reduce using rule 35
	'true'         reduce using rule 35
	'void'         reduce using rule 35
	'while'        reduce using rule 35
	'{'            reduce using rule 35
	L_integ        reduce using rule 35
	L_doubl        reduce using rule 35
	L_quoted       reduce using rule 35
	L_Id           reduce using rule 35
	%eof           reduce using rule 35

	ListStm        goto state 100

State 4


	'bool'         shift, and enter state 83
	'double'       shift, and enter state 84
	'int'          shift, and enter state 85
	'string'       shift, and enter state 86
	'void'         shift, and enter state 87
	%eof           reduce using rule 37

	ListArg        goto state 98
	Type           goto state 81
	Arg            goto state 99

State 5


	L_Id           shift, and enter state 61

	Id             goto state 96
	ListId         goto state 97

State 6


	'bool'         shift, and enter state 83
	'double'       shift, and enter state 84
	'int'          shift, and enter state 85
	'string'       shift, and enter state 86
	'void'         shift, and enter state 87

	Type           goto state 95

State 7


	'!'            shift, and enter state 51
	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'++'           shift, and enter state 54
	'-'            shift, and enter state 55
	'--'           shift, and enter state 56
	'bool'         shift, and enter state 83
	'double'       shift, and enter state 84
	'false'        shift, and enter state 57
	'if'           shift, and enter state 91
	'int'          shift, and enter state 85
	'return'       shift, and enter state 92
	'string'       shift, and enter state 86
	'true'         shift, and enter state 58
	'void'         shift, and enter state 87
	'while'        shift, and enter state 93
	'{'            shift, and enter state 94
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Type           goto state 88
	Stm            goto state 89
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 35
	Exp13          goto state 36
	Exp12          goto state 37
	Exp11          goto state 38
	Exp10          goto state 39
	Exp9           goto state 40
	Exp8           goto state 41
	Exp4           goto state 42
	Exp3           goto state 43
	Exp2           goto state 44
	Exp            goto state 90
	Exp1           goto state 46
	Exp5           goto state 47
	Exp6           goto state 48
	Exp7           goto state 49

State 8


	'bool'         shift, and enter state 83
	'double'       shift, and enter state 84
	'int'          shift, and enter state 85
	'string'       shift, and enter state 86
	'void'         shift, and enter state 87

	Type           goto state 81
	Arg            goto state 82

State 9


	'('            shift, and enter state 52
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 79
	Exp16          goto state 80

State 10


	'('            shift, and enter state 52
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 77
	Exp16          goto state 33
	Exp15          goto state 78

State 11


	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 76

State 12


	'!'            shift, and enter state 51
	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'++'           shift, and enter state 54
	'-'            shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 35
	Exp13          goto state 75

State 13


	'!'            shift, and enter state 51
	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'++'           shift, and enter state 54
	'-'            shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 35
	Exp13          goto state 36
	Exp12          goto state 74

State 14


	'!'            shift, and enter state 51
	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'++'           shift, and enter state 54
	'-'            shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 35
	Exp13          goto state 36
	Exp12          goto state 37
	Exp11          goto state 73

State 15


	'!'            shift, and enter state 51
	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'++'           shift, and enter state 54
	'-'            shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 35
	Exp13          goto state 36
	Exp12          goto state 37
	Exp11          goto state 38
	Exp10          goto state 72

State 16


	'!'            shift, and enter state 51
	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'++'           shift, and enter state 54
	'-'            shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 35
	Exp13          goto state 36
	Exp12          goto state 37
	Exp11          goto state 38
	Exp10          goto state 39
	Exp9           goto state 71

State 17


	'!'            shift, and enter state 51
	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'++'           shift, and enter state 54
	'-'            shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 35
	Exp13          goto state 36
	Exp12          goto state 37
	Exp11          goto state 38
	Exp10          goto state 39
	Exp9           goto state 40
	Exp8           goto state 70

State 18


	'!'            shift, and enter state 51
	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'++'           shift, and enter state 54
	'-'            shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 35
	Exp13          goto state 36
	Exp12          goto state 37
	Exp11          goto state 38
	Exp10          goto state 39
	Exp9           goto state 40
	Exp8           goto state 41
	Exp4           goto state 69
	Exp5           goto state 47
	Exp6           goto state 48
	Exp7           goto state 49

State 19


	'!'            shift, and enter state 51
	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'++'           shift, and enter state 54
	'-'            shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 35
	Exp13          goto state 36
	Exp12          goto state 37
	Exp11          goto state 38
	Exp10          goto state 39
	Exp9           goto state 40
	Exp8           goto state 41
	Exp4           goto state 42
	Exp3           goto state 68
	Exp5           goto state 47
	Exp6           goto state 48
	Exp7           goto state 49

State 20


	'!'            shift, and enter state 51
	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'++'           shift, and enter state 54
	'-'            shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 35
	Exp13          goto state 36
	Exp12          goto state 37
	Exp11          goto state 38
	Exp10          goto state 39
	Exp9           goto state 40
	Exp8           goto state 41
	Exp4           goto state 42
	Exp3           goto state 43
	Exp2           goto state 67
	Exp5           goto state 47
	Exp6           goto state 48
	Exp7           goto state 49

State 21


	'!'            shift, and enter state 51
	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'++'           shift, and enter state 54
	'-'            shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 35
	Exp13          goto state 36
	Exp12          goto state 37
	Exp11          goto state 38
	Exp10          goto state 39
	Exp9           goto state 40
	Exp8           goto state 41
	Exp4           goto state 42
	Exp3           goto state 43
	Exp2           goto state 44
	Exp            goto state 66
	Exp1           goto state 46
	Exp5           goto state 47
	Exp6           goto state 48
	Exp7           goto state 49

State 22


	'!'            shift, and enter state 51
	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'++'           shift, and enter state 54
	'-'            shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 35
	Exp13          goto state 36
	Exp12          goto state 37
	Exp11          goto state 38
	Exp10          goto state 39
	Exp9           goto state 40
	Exp8           goto state 41
	Exp4           goto state 42
	Exp3           goto state 43
	Exp2           goto state 44
	Exp1           goto state 65
	Exp5           goto state 47
	Exp6           goto state 48
	Exp7           goto state 49

State 23


	'!'            shift, and enter state 51
	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'++'           shift, and enter state 54
	'-'            shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 35
	Exp13          goto state 36
	Exp12          goto state 37
	Exp11          goto state 38
	Exp10          goto state 39
	Exp9           goto state 40
	Exp8           goto state 41
	Exp5           goto state 64
	Exp6           goto state 48
	Exp7           goto state 49

State 24


	'!'            shift, and enter state 51
	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'++'           shift, and enter state 54
	'-'            shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 35
	Exp13          goto state 36
	Exp12          goto state 37
	Exp11          goto state 38
	Exp10          goto state 39
	Exp9           goto state 40
	Exp8           goto state 41
	Exp6           goto state 63
	Exp7           goto state 49

State 25


	'!'            shift, and enter state 51
	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'++'           shift, and enter state 54
	'-'            shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 35
	Exp13          goto state 36
	Exp12          goto state 37
	Exp11          goto state 38
	Exp10          goto state 39
	Exp9           goto state 40
	Exp8           goto state 41
	Exp7           goto state 62

State 26


	'!'            shift, and enter state 51
	'('            shift, and enter state 52
	'*'            shift, and enter state 53
	'++'           shift, and enter state 54
	'-'            shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 58
	L_integ        shift, and enter state 28
	L_doubl        shift, and enter state 59
	L_quoted       shift, and enter state 60
	L_Id           shift, and enter state 61
	%eof           reduce using rule 110

	Integer        goto state 29
	Double         goto state 30
	String         goto state 31
	Id             goto state 32
	Exp16          goto state 33
	Exp15          goto state 34
	Exp14          goto state 35
	Exp13          goto state 36
	Exp12          goto state 37
	Exp11          goto state 38
	Exp10          goto state 39
	Exp9           goto state 40
	Exp8           goto state 41
	Exp4           goto state 42
	Exp3           goto state 43
	Exp2           goto state 44
	Exp            goto state 45
	Exp1           goto state 46
	Exp5           goto state 47
	Exp6           goto state 48
	Exp7           goto state 49
	ListExp        goto state 50

State 27


	L_integ        shift, and enter state 28


State 28

	Integer -> L_integ .                                (rule 27)

	'!='           reduce using rule 27
	'%'            reduce using rule 27
	'&&'           reduce using rule 27
	')'            reduce using rule 27
	'*'            reduce using rule 27
	'+'            reduce using rule 27
	'++'           reduce using rule 27
	'+='           reduce using rule 27
	','            reduce using rule 27
	'-'            reduce using rule 27
	'--'           reduce using rule 27
	'-='           reduce using rule 27
	'/'            reduce using rule 27
	';'            reduce using rule 27
	'<'            reduce using rule 27
	'<<'           reduce using rule 27
	'<='           reduce using rule 27
	'='            reduce using rule 27
	'=='           reduce using rule 27
	'>'            reduce using rule 27
	'>='           reduce using rule 27
	'>>'           reduce using rule 27
	'?'            reduce using rule 27
	'||'           reduce using rule 27
	%eof           reduce using rule 27


State 29

	Exp16 -> Integer .                                  (rule 56)

	'!='           reduce using rule 56
	'%'            reduce using rule 56
	'&&'           reduce using rule 56
	')'            reduce using rule 56
	'*'            reduce using rule 56
	'+'            reduce using rule 56
	'++'           reduce using rule 56
	'+='           reduce using rule 56
	','            reduce using rule 56
	'-'            reduce using rule 56
	'--'           reduce using rule 56
	'-='           reduce using rule 56
	'/'            reduce using rule 56
	';'            reduce using rule 56
	'<'            reduce using rule 56
	'<<'           reduce using rule 56
	'<='           reduce using rule 56
	'='            reduce using rule 56
	'=='           reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	'>>'           reduce using rule 56
	'?'            reduce using rule 56
	'||'           reduce using rule 56
	%eof           reduce using rule 56


State 30

	Exp16 -> Double .                                   (rule 57)

	'!='           reduce using rule 57
	'%'            reduce using rule 57
	'&&'           reduce using rule 57
	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	'++'           reduce using rule 57
	'+='           reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	'--'           reduce using rule 57
	'-='           reduce using rule 57
	'/'            reduce using rule 57
	';'            reduce using rule 57
	'<'            reduce using rule 57
	'<<'           reduce using rule 57
	'<='           reduce using rule 57
	'='            reduce using rule 57
	'=='           reduce using rule 57
	'>'            reduce using rule 57
	'>='           reduce using rule 57
	'>>'           reduce using rule 57
	'?'            reduce using rule 57
	'||'           reduce using rule 57
	%eof           reduce using rule 57


State 31

	Exp16 -> String .                                   (rule 58)

	'!='           reduce using rule 58
	'%'            reduce using rule 58
	'&&'           reduce using rule 58
	')'            reduce using rule 58
	'*'            reduce using rule 58
	'+'            reduce using rule 58
	'++'           reduce using rule 58
	'+='           reduce using rule 58
	','            reduce using rule 58
	'-'            reduce using rule 58
	'--'           reduce using rule 58
	'-='           reduce using rule 58
	'/'            reduce using rule 58
	';'            reduce using rule 58
	'<'            reduce using rule 58
	'<<'           reduce using rule 58
	'<='           reduce using rule 58
	'='            reduce using rule 58
	'=='           reduce using rule 58
	'>'            reduce using rule 58
	'>='           reduce using rule 58
	'>>'           reduce using rule 58
	'?'            reduce using rule 58
	'||'           reduce using rule 58
	%eof           reduce using rule 58


State 32

	Exp16 -> Id .                                       (rule 61)
	Exp15 -> Id . '(' ListExp ')'                       (rule 63)
	Exp15 -> Id . '::' Id                               (rule 64)
	Exp15 -> Id . '[' Id ']'                            (rule 65)
	Exp14 -> Id . '.' Id                                (rule 70)
	Exp14 -> Id . '->' Id                               (rule 71)

	'!='           reduce using rule 61
	'%'            reduce using rule 61
	'&&'           reduce using rule 61
	'('            shift, and enter state 118
	')'            reduce using rule 61
	'*'            reduce using rule 61
	'+'            reduce using rule 61
	'++'           reduce using rule 61
	'+='           reduce using rule 61
	','            reduce using rule 61
	'-'            reduce using rule 61
	'--'           reduce using rule 61
	'-='           reduce using rule 61
	'->'           shift, and enter state 149
	'.'            shift, and enter state 150
	'/'            reduce using rule 61
	'::'           shift, and enter state 119
	';'            reduce using rule 61
	'<'            reduce using rule 61
	'<<'           reduce using rule 61
	'<='           reduce using rule 61
	'='            reduce using rule 61
	'=='           reduce using rule 61
	'>'            reduce using rule 61
	'>='           reduce using rule 61
	'>>'           reduce using rule 61
	'?'            reduce using rule 61
	'['            shift, and enter state 120
	'||'           reduce using rule 61
	%eof           reduce using rule 61


State 33

	Exp15 -> Exp16 .                                    (rule 66)

	'!='           reduce using rule 66
	'%'            reduce using rule 66
	'&&'           reduce using rule 66
	')'            reduce using rule 66
	'*'            reduce using rule 66
	'+'            reduce using rule 66
	'++'           reduce using rule 66
	'+='           reduce using rule 66
	','            reduce using rule 66
	'-'            reduce using rule 66
	'--'           reduce using rule 66
	'-='           reduce using rule 66
	'/'            reduce using rule 66
	';'            reduce using rule 66
	'<'            reduce using rule 66
	'<<'           reduce using rule 66
	'<='           reduce using rule 66
	'='            reduce using rule 66
	'=='           reduce using rule 66
	'>'            reduce using rule 66
	'>='           reduce using rule 66
	'>>'           reduce using rule 66
	'?'            reduce using rule 66
	'||'           reduce using rule 66
	%eof           reduce using rule 66


State 34

	Exp14 -> Exp15 . '++'                               (rule 67)
	Exp14 -> Exp15 . '--'                               (rule 68)
	Exp14 -> Exp15 .                                    (rule 72)
